Fixed up column vertical align

--- a/ui/themes/default/s-normal.css
+++ b/ui/themes/default/s-normal.css
@@ -424,6 +424,7 @@ table.list td div.calendar {
         margin-left: 26%;
     }
     div.help-off.guided-off div.large.mediumaside.columns div.panelcolumns div.panelcolumn {
+        vertical-align: top;
         display: inline-block;
         width: 49%;
         margin-right: 1%;
